# emergy-tool

./: README.md
.github/workflows/: backend.yml
backend/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/src/: .env  manage.py  pytest.ini
backend/src/accounts/: serializers.py  urls.py  views.py
backend/src/accounts/tests/: test_user.py
backend/src/dashboard/: urls.py  views.py
backend/src/dashboard/tests/: dashboard_tests.py
backend/src/emergy_app/: asgi.py  settings.py  urls.py  wsgi.py
backend/src/lci/: apps.py  models.py  serializers.py  urls.py  views.py
backend/src/lci/migrations/: 0001_initial.py
backend/src/lci/tests/: test_upload.py
backend/src/scale_config/: apps.py  models.py  serializers.py  urls.py  views.py
backend/src/scale_config/migrations/: 0001_initial.py  0002_emergycalculation.py
backend/src/scale_config/tests/: emergy_calculation_tests.py  scale_config_test.py
backend/src/webhook/: urls.py  views.py
frontend/: .dockerignore  Dockerfile  docker-compose.yaml  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.css  main.tsx  router.tsx
frontend/src/contexts/: auth-context.tsx
frontend/src/hooks/: use-auth.ts  use-sidebar.ts
frontend/src/keys/: mutations.ts  queries.ts
frontend/src/lib/: menu-list.ts  sidebar-data.ts
frontend/src/pages/: CalculatePage.tsx  DashboardPage.tsx  HelpPage.tsx  HomePage.tsx  ImportDataPage.tsx  LoginPage.tsx  NotFoundPage.tsx  RegisterPage.tsx
frontend/src/routes/: private-route.tsx  public-only-route.tsx  (+1 more)
(+63 files in other folders)
