[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Samara Marques <samarassk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
pytest = "^8.3.5"
djangorestframework = "^3.16.0"
djangorestframework-simplejwt = "5.2.2"
psycopg2-binary = "^2.9.10"
python-decouple = "^3.8"
drf-yasg = "^1.21.10"
pytest-django = "^4.11.1"
setuptools = "^80.7.1"
django-cors-headers = "^4.7.0"
gunicorn = "^23.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
